<resources>
    <string name="app_name">CRM</string>
    <string name="dashboard">DashBoard</string>
    <string name="teachers">Teacher</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="class_schedule">Class schedule</string>
    <string name="groups">Groups</string>
    <string name="users">Users</string>
    <string name="payments">Payments</string>
    <string name="attendance">Attendance</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment_date">Payment date</string>
    <string name="balance">Balance</string>
    <string name="payed">Payed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sig_up">Sign up</string>
    <string name="have_you_an_account_log_in">Have you an account?</string>
    <string name="log_in">Log In</string>
    <string name="set_image">Set Image</string>
</resources>