<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/signUpFragment"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard"/>

        <item android:id="@+id/coursesFragment"
            android:title="@string/courses"
            android:icon="@drawable/courses"/>

        <item android:id="@+id/groupsFragment"
            android:title="@string/groups"
            android:icon="@drawable/groups"/>

        <item android:id="@+id/scheduleFragment"
            android:title="@string/class_schedule"
            android:icon="@drawable/class_schedule"/>

        <item android:id="@+id/teachersFragment"
            android:title="@string/teachers"
            android:icon="@drawable/teacher"/>

        <item android:id="@+id/studentsFragment"
            android:title="@string/students"
            android:icon="@drawable/graduated" />

        <item android:id="@+id/usersFragment"
            android:title="@string/users"
            android:icon="@drawable/ic_users"/>

        <item android:id="@+id/attendanceFragment"
            android:title="@string/attendance"
            android:icon="@drawable/attendance"/>

        <item android:id="@+id/paymentFragment"
            android:title="@string/payments"
            android:icon="@drawable/payment"/>
    </group>

</menu>