<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/name"
        android:textColor="@color/black"
        android:layout_gravity="top"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textColor="@color/black"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/balance"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/payment_date"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/payed"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textSize="18sp" />
</LinearLayout>