<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="24dp"
        android:visibility="gone"
        android:id="@+id/select"
        android:layout_height="24dp"
        android:src="@drawable/selected_image"
        app:tint="@color/purple_500" />

    <TextView
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/name"
        android:textColor="@color/black"
        android:layout_gravity="top"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textColor="@color/black"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/phone_number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/group"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/groups"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/teacher"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/teachers"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textSize="18sp" />
</LinearLayout>