<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_log_in"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.sign_in.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_color="@color/drawer_icon_bg"
            app:civ_border_width="3dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_person"
            android:id="@+id/image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:layout_marginTop="5dp"
            android:id="@+id/change"
            android:text="@string/set_image"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInput"
            app:layout_constraintTop_toBottomOf="@id/change"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:helperText="Required"
            app:helperTextTextColor="#F44336"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/drawer_icon_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:transitionName="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameInput"
            app:layout_constraintTop_toBottomOf="@id/nameInput"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            app:helperText="Required"
            app:helperTextTextColor="#F44336"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/drawer_icon_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:transitionName="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInput"
            app:layout_constraintTop_toBottomOf="@id/lastnameInput"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:helperText="Required"
            app:prefixText="+998"
            app:helperTextTextColor="#F44336"
            app:startIconDrawable="@drawable/ic_phone_android"
            app:startIconTint="@color/drawer_icon_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:transitionName="phone"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneInput"
            android:hint="Password"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/drawer_icon_bg"
            app:helperText="Required"
            app:helperTextTextColor="#F44336"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/drawer_icon_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:transitionName="password" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/sig_up"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="@drawable/bg_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            android:transitionName="next"
            android:id="@+id/sign_up"
            android:layout_marginTop="40dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:text="@string/have_you_an_account_log_in"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/purple_700"
                android:layout_marginTop="5dp"
                android:id="@+id/log_in"
                android:transitionName="next_to"
                android:text="@string/log_in"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>